--- a/pages/news.html
+++ b/pages/news.html
@@ -4,3 +4,9 @@ title: News
 ---
 
 <h1>{{ page.title }}</h1>
+
+<ul class="posts">
+  {% for post in site.categories.blog %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
