--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,6 +7,10 @@ title: Blog
 
 <ul class="posts">
   {% for post in site.categories.blog %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li>
+      <div id="post-title"><span>{{ post.date | date_to_string }}</span> &raquo; {{post.title}}</div>
+      <div id="post-content">{{ post.content }}</div>
+      <a href="{{ post.url }}">Learn more &raquo;</a>
+    </li>
   {% endfor %}
 </ul>
