--- a/pages/news.html
+++ b/pages/news.html
@@ -6,7 +6,11 @@ title: News
 <h1>{{ page.title }}</h1>
 
 <ul class="posts">
-  {% for post in site.categories.blog %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% for post in site.categories.news %}
+    <li>
+      <div id="post-title"><span>{{ post.date | date_to_string }}</span> &raquo; {{post.title}}</div>
+      <div id="post-content">{{ post.content }}</div>
+      <a href="{{ post.url }}">Learn more &raquo;</a>
+    </li>
   {% endfor %}
 </ul>
