--- a/pages/customers.html
+++ b/pages/customers.html
@@ -4,3 +4,12 @@ title: Customers
 ---
 
 <h1>{{ page.title }}</h1>
+
+<ul class="posts">
+  {% for post in site.categories.customer %}
+    <li>
+      <div id="post-title"><span>{{post.title}}</div>
+      <div id="post-content">{{ post.content }}</div>
+    </li>
+  {% endfor %}
+</ul>
