--- a/pages/news.html
+++ b/pages/news.html
@@ -9,7 +9,7 @@ title: News
   {% for post in site.categories.news %}
     <li>
       <div id="post-title"><span>{{ post.date | date_to_string }}</span> &raquo; {{post.title}}</div>
-      <div id="post-content">{{ post.content }}</div>
+      <div id="post-content">{{ post.excerpt }}</div>
       <a href="{{ post.url }}">Learn more &raquo;</a>
     </li>
   {% endfor %}
