add note to redirect to main site

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: front-page
 title: SixSq Sarl
 ---
 
+<p>
+This is a mock site for testing the web site layout.  Please see the
+production SixSq site at <a href="http://sixsq.com/">http://sixsq.com/.</a>
+
 {% for product in site.categories.products %}
   {% if forloop.index0 < 4 %}
     <div class="product-panel">
