--- a/pages/products.html
+++ b/pages/products.html
@@ -3,4 +3,12 @@ layout: default
 title: Products
 ---
 
-<h1>{{ page.title }}</h1>
+<ul class="posts">
+  {% for post in site.categories.product %}
+    <li>
+      <div id="post-title"><span>{{ post.date | date_to_string }}</span> &raquo; {{post.title}}</div>
+      <div id="post-content">{{ post.content }}</div>
+      <a href="{{ post.url }}">Learn more &raquo;</a>
+    </li>
+  {% endfor %}
+</ul>
