fix name of class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ production SixSq site at <a href="http://sixsq.com/">http://sixsq.com/.</a>
 </p>
 
 {% for product in site.categories.product limit:4 %}
-  <div class="product-panel">
+  <div class="panel">
     <table>
       <tr>
         <td>
