--- a/news.html
+++ b/news.html
@@ -1,170 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
-	"http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr"
-	xmlns:content="http://purl.org/rss/1.0/modules/content/"
-	xmlns:dc="http://purl.org/dc/terms/"
-	xmlns:foaf="http://xmlns.com/foaf/0.1/"
-	xmlns:og="http://ogp.me/ns#"
-	xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
-	xmlns:sioc="http://rdfs.org/sioc/ns#"
-	xmlns:sioct="http://rdfs.org/sioc/types#"
-	xmlns:skos="http://www.w3.org/2004/02/skos/core#"
-	xmlns:xsd="http://www.w3.org/2001/XMLSchema#">
+---
+layout: default
+title: News
+---
 
-<head profile="http://www.w3.org/1999/xhtml/vocab">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Sixsq | News</title>
-	<link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
+<div class="content_bg">
 
-	<script src="js/jquery.1.7.0.min.js" type="text/javascript"></script>
-	<script src="js/cufon-yui.js" type="text/javascript"></script>
-	<script src="js/helveticaneue_300-helveticaneue_700.font.js" type="text/javascript"></script>
-	<script src="js/bebas_400.font.js" type="text/javascript"></script>
-	<script src="js/sixsq.js" type="text/javascript"></script>
-	<script src="js/jquery.bxSlider.min.js" type="text/javascript"></script>
-</head>
+  <div class="breadcrumb">
+    <a href="/" class="first">Home</a>
+    <a href="news.html" class="current">News</a>
+  </div>
 
-<body class="not_front_page">
-	<div id="wrapper">
-		<div id="header">
-			<div class="top">
-				<div class="logo"></div>
-				<div class="menu_bar">
-					<ul>
-						<li class="home"><a href="index.html"></a></li>
-						<li class="about"><a href="#">About us</a></li>
-						<li><a href="#">Product</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="news.html">News</a></li>
-						<li><a href="#">Customers</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		
-		<div id="content">
-			<div class="content_bg">
-				<div class="breadcrumb">
-					<a href="#" class="first">Home</a>
-					<a href="#">Media</a>
-					<a href="#" class="current">News</a>
-				</div>
-				<div class="main">
-					<h1 class="list_title">Company news</h1>
-					<div class="pager">
-						<ul>
-							<li class="prev"><a href="">prev</a></li>
-							<li><a href="#">1</a></li>
-							<li class="current"><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li class="next"><a href="">next</a></li>
-						</ul>
-					</div>
-					<div class="list_news">
-						<ul>
-							<li>
-								<img src="img/content/img_01.png" />
-								<a href="news_detail.html" class="title">SixSq at European Grid Infrastructure Technical Forum</a>
-								<div class="teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin.</div>
-								<div class="date">November 4, 2011</div>
-							</li>
-							<li>
-								<img src="img/content/img_01.png" />
-								<a href="news_detail.html" class="title">SixSq at European Grid Infrastructure Technical Forum</a>
-								<div class="teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin.</div>
-								<div class="date">November 4, 2011</div>
-							</li>
-							<li>
-								<img src="img/content/img_01.png" />
-								<a href="news_detail.html" class="title">SixSq at European Grid Infrastructure Technical Forum</a>
-								<div class="teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin.</div>
-								<div class="date">November 4, 2011</div>
-							</li>
-							<li>
-								<img src="img/content/img_01.png" />
-								<a href="news_detail.html" class="title">SixSq at European Grid Infrastructure Technical Forum</a>
-								<div class="teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin.</div>
-								<div class="date">November 4, 2011</div>
-							</li>
-							<li>
-								<img src="img/content/img_01.png" />
-								<a href="news_detail.html" class="title">SixSq at European Grid Infrastructure Technical Forum</a>
-								<div class="teaser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mattis ornare quam euismod sollicitudin.</div>
-								<div class="date">November 4, 2011</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="sidebar products">
-					<div class="status_lab">
-						<h2>StatusLab</h2>
-						<p>Open-source IaaS cloud distribution. Turn your physical infrastructure into a powerful IaaS cloud in minutes. Automated, on-demand, creation of multi-machine runtime.</p>
-						<a href="#">Learn more</a>
-					</div>
-					<div class="slip_stream">
-						<h2>SlipStream</h2>
-						<p>Automated, on-demand, creation of multi-machine runtime environments. In other words, your software engineering PaaS solution, as product and service.</p>
-						<a href="#">Learn more</a>
-					</div>
-					<div class="ready_pack">
-						<h2>ReadyPack</h2>
-						<p>Automated, on-demand, creation of multi-machine runtime environments. In other words, your software engineering PaaS solution, as product and service.</p>
-						<a href="#">Learn more</a>
-					</div>
-					<div class="training_coatching">
-						<h2>Training Coatching</h2>
-						<p>Automated, on-demand, creation of multi-machine runtime environments. In other words...</p>
-						<a href="#">Learn more</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<div class="customers">
-			<h3>Customers</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
- 			<div class="logos">
-				<img src="img/design/logo_eu.png" />
-				<img src="img/design/logo_sfp.png" />
-				<img src="img/design/logo_esa.png" />
-				<img src="img/design/logo_esoc.png" />
-				<img src="img/design/logo_scisys.png" />
-				<img src="img/design/logo_terma.png" />
-				<img src="img/design/logo_thales.png" />
-			</div>
-		</div>
-		
-		<div id="footer">
-			<div class="footer_menu">
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About us</a></li>
-					<li><a href="#">Products</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">News</a></li>
-					<li><a href="#">Customers</a></li>
-					<li><a href="#">Contact us</a></li>
-				</ul>
-			</div>
-			<div class="adress_copyright">
-				<div><span>SixSq.</span><br />c/o Jawer, 7th floor, Building 7<br />Route de Pré-Bois 20<br />1215, Geneva<br />Switzerland</div>
-				<div class="copyright">&copy; 2007-2012, SixSq Sarl. All rights reserved.</div>
-				<div class="design">Design by <a href="http://www.penceo.com">Penceo</a></div>
-			</div>
-			<div class="contact_us">
-				<div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
-				<div class="phone">+41 77 44 68 119<br />+41 77 44 68 170</div>
-				<a class="mail" href="mailto:info@sixsq.com">info@sixsq.com</a>
-			</div>
-			<div class="follow_us">
-				<div>Follow us on:</div>
-				<img src="img/design/icon_news.png" />
-				<img src="img/design/icon_twitter.png" />
-				<img src="img/design/icon_blog.png" />
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+  <div class="main">
+    <h1 class="list_title">{{ page.title }}</h1>
+
+    <div class="pager">
+      <ul>
+	<li class="prev"><a href="">prev</a></li>
+	<li><a href="#">1</a></li>
+	<li class="current"><a href="#">2</a></li>
+	<li><a href="#">3</a></li>
+	<li class="next"><a href="">next</a></li>
+      </ul>
+    </div>
+
+    <div class="list_news">
+      <ul>
+
+        {% for post in site.categories.news %}
+        <li>
+	  <img src="{{ post.image }}" />
+          <a href="{{ post.url }}" class="title">{{ post.title }}</a>
+          <div class="teaser">
+            {{ post.content }}
+          </div>
+          <div class="date">{{ post.date }}</div>
+        </li>
+        {% endfor %}
+
+      </ul>
+    </div>
+  </div>
+</div>
