--- a/about-us.html
+++ b/about-us.html
@@ -3,4 +3,17 @@ layout: default
 title: About us
 ---
 
-SixSq rocks!
+<div class="content_bg">
+
+  <div class="breadcrumb">
+    <a href="/" class="first">Home</a>
+    <a href="contact.html" class="current">{{ page.title }}</a>
+  </div>
+
+  <div class="main">
+    <h1 class="list_title">{{ page.title }}</h1>
+
+    <p>SixSq Rocks!</p>
+
+  </div>
+</div>
