--- a/contact.html
+++ b/contact.html
@@ -3,4 +3,17 @@ layout: default
 title: Contact
 ---
 
-Need information? Give feedback? Get in touch!
+<div class="content_bg">
+
+  <div class="breadcrumb">
+    <a href="/" class="first">Home</a>
+    <a href="contact.html" class="current">{{ page.title }}</a>
+  </div>
+
+  <div class="main">
+    <h1 class="list_title">{{ page.title }}</h1>
+
+    <p>Need information? Give feedback? Get in touch!</p>
+
+  </div>
+</div>
