--- a/about-us.html
+++ b/about-us.html
@@ -3,17 +3,16 @@ layout: default
 title: About us
 ---
 
-<div class="content_bg">
+<div class="breadcrumb">
+  <a href="/" class="first">Home</a>
+  <a href="contact.html" class="current">{{ page.title }}</a>
+</div>
 
-  <div class="breadcrumb">
-    <a href="/" class="first">Home</a>
-    <a href="contact.html" class="current">{{ page.title }}</a>
-  </div>
+<div class="main">
+  <h1 class="list_title">{{ page.title }}</h1>
 
-  <div class="main">
-    <h1 class="list_title">{{ page.title }}</h1>
-
+  <div class="list_news">
     <p>SixSq Rocks!</p>
-
   </div>
+  
 </div>
