make plain presentation for non-list pages

--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,4 @@ layout: default
 title: Contact
 ---
 
-<div class="breadcrumb">
-  <a href="/" class="first">Home</a>
-  <a href="contact.html" class="current">{{ page.title }}</a>
-</div>
-
-<div class="main">
-  <h1 class="list_title">{{ page.title }}</h1>
-  
-  <div class="list_news">
-    <p>Need information? Give feedback? Get in touch!</p>
-  </div>
-  
-</div>
+Need information? Give feedback? Get in touch!
