--- a/about-us.html
+++ b/about-us.html
@@ -1,18 +1,6 @@
 ---
-layout: default
-title: About us
+layout: plain
+title: About Us
 ---
 
-<div class="breadcrumb">
-  <a href="/" class="first">Home</a>
-  <a href="contact.html" class="current">{{ page.title }}</a>
-</div>
-
-<div class="main">
-  <h1 class="list_title">{{ page.title }}</h1>
-
-  <div class="list_news">
-    <p>SixSq Rocks!</p>
-  </div>
-  
-</div>
+<p>SixSq Rocks!</p>
