skeletons of all top-level pages

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
-layout: default
+layout: plain
 title: Contact
 ---
 
-Need information? Give feedback? Get in touch!
+<p>Need information? Give feedback? Get in touch!</p>
+
