Augmented title for home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: welcome
-title: Home
+title: Agile Cloud Automation Solutions | Open Source Distributed Systems | Coaching Training | SlipStream StratusLab | Cloud Ready Pack | Public Cloud Private Cloud | Geneva Switzerland Europe
 ---
