A few updates Extracted banners

--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -15,41 +15,11 @@ sub: pricing
 
 <h1>Pricing</h1>
 
-Developed by SixSq®, SlipStream® is a multi-cloud coordinated provisioning and image factory engine. In other words, it is an engineering Platform as a Service (PaaS) solution which supports production deployment in the cloud, as well as development, testing, certification and deployment processes into Infrastructure as a Service (IaaS) cloud environments.
-
-The core of SlipStream is open source. SlipStream™ supports a number of cloud providers and technologies.  Connectors provide this interface.  The following lists the connectors which are currently available, released under open source and proprietary licenses.
-
-Available open source connectors:
-<ul>
-    <li>StratusLab</li>
-    <li>OpenStack</li>
-    <li>CloudStack</li>
-    <li>OCCI</li>
-    <li>Physical</li>
-</ul>
-
-Available proprietary connectors:
-<ul>
-    <li>VMWare vCloud Director</li>
-    <li>Amazon EC2</li>
-    <li>Abiquo</li>
-    <li>CloudSigma</li>
-    <li>IBM SmartCloud Entry</li>
-</ul>
-
-SixSq delivers certified SlipStream bundles, containing software binary packages, documentation, starter kit and examples. The bundles can be created 'à la carte', including open sourced and proprietary connectors, as well as custom image and deployment recipes and scripts. The bundles also include maintenance and support so that you stay up to date with our fast release cycles.
+SlipStream is build from an open source core (Apache 2.0). SixSq delivers certified SlipStream bundles, containing software binary packages, documentation, starter kit and examples. The bundles can be created 'à la carte', including open sourced and proprietary connectors, as well as custom image and deployment recipes and scripts. The bundles also include maintenance and support so that you stay up to date with our fast release cycles.
 
 In addition, we deliver SlipStream in a hardware turn key solution, called <a href="/products/nuvlabox.html">NuvlaBox</a>. You can also rely on our <a href="https://slipstream.sixsq.com">SlipStream hosted service</a>, if you prefer the peace of mind of a SaaS delivery model.
 
 SlipStream's pricing policy is simple and transparent. You will find here different clear and flexible plans to use our pro SlipStream bundles.
-
-Please note the following:
-<ul>
-    <li>We reserve the right to change this pricing and conditions at any time</li>
-    <li>All prices exclude VAT</li>
-    <li>All software is delivered from our web platform</li>
-    <li>SixSq guarantees full backward compatibility for minor releases or upgrade script will be provided</li>
-</ul>
 
 <h1>Subscription Plan</h1>
 
@@ -191,6 +161,28 @@ With the license plan, you pay once and own the SlipStream license. To have acce
 
 <h1>Definitions</h1>
 
+SlipStream supports a number of cloud providers and technologies. Connectors provide this interface.  The following lists the connectors which are currently available, released under open source and proprietary licenses.
+
+Available open source connectors:
+<ul>
+    <li>StratusLab</li>
+    <li>OpenStack</li>
+    <li>CloudStack</li>
+    <li>OCCI</li>
+    <li>Physical</li>
+</ul>
+
+Available proprietary connectors:
+<ul>
+    <li>VMWare vCloud Director</li>
+    <li>Amazon EC2</li>
+    <li>Abiquo</li>
+    <li>CloudSigma</li>
+    <li>IBM SmartCloud Entry</li>
+</ul>
+
+<h1>Definitions</h1>
+
 The following are terms used in the context of SlipStream™, referred to when defining license capabilities and constraints. 
 <ul>
     <li>Connector: A connector is an instance of a specific software component that allows a SlipStream™ server to interface with a specific IaaS cloud service, normally for a specific region and/or zone. For example, connectors are normally designed to point specifically to a single region for a given cloud.  It is therefore standard practice to have several separate instances of the same connector (class) to interface SlipStream™ with several regions of the same cloud. License restrictions therefore normally refer to connector instance.</li>
@@ -221,6 +213,18 @@ The license or subscription bearer is required to upgrade regularly, within the 
 <h2>Server Instances</h2>
 
 A SlipStream™ license or subscription bearer gives right to a single instance of the service.  Via its connector, however, it can federate IaaS clouds installed in a number of different sites. 
+
+<h2>Notes</h2>
+
+Please note the following:
+<ul>
+    <li>We reserve the right to change this pricing and conditions at any time</li>
+    <li>All prices exclude VAT</li>
+    <li>All software is delivered from our web platform</li>
+    <li>SixSq guarantees full backward compatibility for minor releases or upgrade script will be provided</li>
+</ul>
+
+
 
 <h1>Want to Know More?</h1>
 
