Update about us & slipstream pricing

--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -13,13 +13,44 @@ pricing: /products/slipstream-pricing.html
 sub: pricing
 ---
 
-<h1>Pricing</h1>
+<h1>SaaS Plan</h1>
 
-SlipStream is build from an open source core (Apache 2.0). SixSq delivers certified SlipStream bundles, containing software binary packages, documentation, starter kit and examples. The bundles can be created 'à la carte', including open sourced and proprietary connectors, as well as custom image and deployment recipes and scripts. The bundles also include maintenance and support so that you stay up to date with our fast release cycles.
+If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on our <a href="https://slipstream.sixsq.com">SlipStream hosted service</a>.  
 
-In addition, we deliver SlipStream in a hardware turn key solution, called <a href="/products/nuvlabox.html">NuvlaBox</a>. You can also rely on our <a href="https://slipstream.sixsq.com">SlipStream hosted service</a>, if you prefer the peace of mind of a SaaS delivery model.
+<div id="pricing-table" class="clear">
+    <div class="plan">
+        <h3>Hosted Service (SaaS) Basic<span>Free</span></h3>
+        <ul>
+            <li><b>1</b> User</li>
+            <li><b>2</b> Connector (EC2 and exoscale)</li>
+            <li><b>Unlimited</b> deployments</li>
+            <li><b>Unlimited</b> image creations</li>			
+            <li><b>Always up to date</b></li>			
+            <li><b>Community support only</b></li>			
+        </ul> 
+    </div>
+    <div class="plan">
+        <h3>Hosted Service (SaaS) Premium<span>€50</span></h3>
+		/ month
+        <ul>
+            <li><b>1</b> User</li>
+            <li><b>2</b> Connector (EC2 and exoscale)</li>
+            <li><b>Unlimited</b> deployments</li>
+            <li><b>Unlimited</b> image creations</li>			
+            <li><b>Always up to date</b></li>			
+            <li><b>Access to our user support</b></li>
+            <li><b>Publish modules</b></li>
+        </ul>
+    </div>
+</div>
 
-SlipStream's pricing policy is simple and transparent. You will find here different clear and flexible plans to use our pro SlipStream bundles.
+The only other cost is to the cloud provider for the use of their resources, 
+
+In addition, we deliver SlipStream in a hardware turn key solution, called <a href="/products/nuvlabox.html">NuvlaBox</a>. 
+
+If you prefer to have SlipStream installed **in-house**, SixSq delivers certified SlipStream bundles, containing software binary packages, documentation, starter kit and examples. The bundles can be created 'à la carte', including open sourced and proprietary connectors, as well as custom image and deployment recipes and scripts. The bundles also include maintenance and support so that you stay up to date with our fast release cycles.
+
+SlipStream's pricing policy is simple and transparent. You will find below various clear and flexible plans for the use of our pro SlipStream bundles.
 
 <h1>Subscription Plan</h1>
 
@@ -30,7 +61,7 @@ and access to our maintenance and support service. No more costs, no surprises.
 
 <div id="pricing-table" class="clear">
     <div class="plan">
-        <h3>SME<span>€ 995</span></h3>
+        <h3>SME<span>€995</span></h3>
         /month
         <ul>
             <li><b>5</b> Users</li>
@@ -71,21 +102,21 @@ and access to our maintenance and support service. No more costs, no surprises.
 
 <div id="pricing-table" class="clear">
     <div class="plan">
-        <h3>Extra Users (active)<span>€ 245</span></h3>
+        <h3>Extra Users (active)<span>€245</span></h3>
         /month
         <ul>
             <li><b>5</b> Users</li>
         </ul> 
     </div>
     <div class="plan">
-        <h3>Extra Open Source Connector<span>€ 245</span></h3>
+        <h3>Extra Open Source Connector<span>€245</span></h3>
         /month
         <ul>
             <li><b>1</b> Connector</li>
         </ul> 
     </div>
     <div class="plan">
-        <h3>Extra Proprietary Connector<span>€ 495</span></h3>
+        <h3>Extra Proprietary Connector<span>€495</span></h3>
         /month
         <ul>
             <li><b>1</b> Connector</li>
@@ -102,36 +133,36 @@ With the license plan, you pay once and own the SlipStream license. To have acce
 
 <div id="pricing-table" class="clear bignumber">
     <div class="plan">
-        <h3>SME<span>€ 19,195</span></h3>
+        <h3>SME<span>€19,195</span></h3>
         <ul>
             <li><b>5</b> Users</li>
             <li><b>1</b> Connector</li>
             <li><b>Unlimited</b> deployments</li>			
             <li><b>Unlimited</b> image creations</li>			
             <li><b>Access to minor software upgrades</b></li>			
-            <li><b>Support and Maintenance<br/><span>€ 3,839</span> / year</b></li>			
+            <li><b>Support and Maintenance<br/><span>€3,839</span> / year</b></li>			
         </ul> 
     </div>
     <div class="plan">
-        <h3>Enterprise (small)<span>€ 34,555</span></h3>
+        <h3>Enterprise (small)<span>€34,555</span></h3>
         <ul>
             <li><b>10</b> Users</li>
             <li><b>2</b> Connectors</li>
             <li><b>Unlimited</b> deployments</li>			
             <li><b>Unlimited</b> image creations</li>			
             <li><b>Access to minor software upgrades</b></li>			
-            <li><b>Support and Maintenance<br/><span>€ 6,911</span> / year</b></li>			
+            <li><b>Support and Maintenance<br/><span>€6,911</span> / year</b></li>			
         </ul> 
     </div>
     <div class="plan">
-        <h3>Enterprise (large)<span>€ 65,275</span></h3>
+        <h3>Enterprise (large)<span>€65,275</span></h3>
         <ul>
             <li><b>20</b> Users</li>
             <li><b>4</b> Connectors</li>
             <li><b>Unlimited</b> deployments</li>			
             <li><b>Unlimited</b> image creations</li>			
             <li><b>Access to minor software upgrades</b></li>			
-            <li><b>Support and Maintenance<br/><span>€ 13,055</span> / year</b></li>			
+            <li><b>Support and Maintenance<br/><span>€13,055</span> / year</b></li>			
         </ul> 
     </div>
 </div>
@@ -140,19 +171,19 @@ With the license plan, you pay once and own the SlipStream license. To have acce
 
 <div id="pricing-table" class="clear bignumber">
     <div class="plan">
-        <h3>Extra Users (active)<span>€ 4,795</span></h3>
+        <h3>Extra Users (active)<span>€4,795</span></h3>
         <ul>
             <li><b>5</b> Users</li>
         </ul> 
     </div>
     <div class="plan">
-        <h3>Extra Open Source Connector<span>€ 4,795</span></h3>
+        <h3>Extra Open Source Connector<span>€4,795</span></h3>
         <ul>
             <li><b>1</b> Connector</li>
         </ul> 
     </div>
     <div class="plan">
-        <h3>Extra Proprietary Connector<span>€ 9,595</span></h3>
+        <h3>Extra Proprietary Connector<span>€9,595</span></h3>
         <ul>
             <li><b>1</b> Connector</li>
         </ul> 
@@ -164,6 +195,7 @@ With the license plan, you pay once and own the SlipStream license. To have acce
 SlipStream supports a number of cloud providers and technologies. Connectors provide this interface.  The following lists the connectors which are currently available, released under open source and proprietary licenses.
 
 Available open source connectors:
+
 <ul>
     <li>StratusLab</li>
     <li>OpenStack</li>
@@ -173,6 +205,7 @@ Available open source connectors:
 </ul>
 
 Available proprietary connectors:
+
 <ul>
     <li>VMWare vCloud Director</li>
     <li>Amazon EC2</li>
@@ -184,6 +217,7 @@ Available proprietary connectors:
 <h1>Definitions</h1>
 
 The following are terms used in the context of SlipStream™, referred to when defining license capabilities and constraints. 
+
 <ul>
     <li>Connector: A connector is an instance of a specific software component that allows a SlipStream™ server to interface with a specific IaaS cloud service, normally for a specific region and/or zone. For example, connectors are normally designed to point specifically to a single region for a given cloud.  It is therefore standard practice to have several separate instances of the same connector (class) to interface SlipStream™ with several regions of the same cloud. License restrictions therefore normally refer to connector instance.</li>
     <li>Open source connector: this refers to a connector released under an open source license (normally the same license as the SlipStream™ Server). SixSq® normally releases connectors which interface with open source IaaS implementations under an open source license.</li>
@@ -217,14 +251,13 @@ A SlipStream™ license or subscription bearer gives right to a single instance 
 <h2>Notes</h2>
 
 Please note the following:
+
 <ul>
     <li>We reserve the right to change this pricing and conditions at any time</li>
     <li>All prices exclude VAT</li>
     <li>All software is delivered from our web platform</li>
     <li>SixSq guarantees full backward compatibility for minor releases or upgrade script will be provided</li>
 </ul>
-
-
 
 <h1>Want to Know More?</h1>
 
