--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -13,20 +13,34 @@ pricing: /products/slipstream-pricing.html
 sub: pricing
 ---
 
+<h1>Pricing</h1>
+
+SlipStream's pricing policy is simple and transparent. You will find below various flexible plans for the use of SlipStream:
+
+<ul>
+    <li><b>SaaS Plan</b>: Peace of mind with our SaaS offer (psst... it's free!)</li>
+    <li><b>On-Premise Subscription Plan</b>: SlipStream on-premise in a pay-as-you go model.</li>
+    <li><b>On-Premise License Plan</b>: SlipStream on-premise in a single payment.</li>
+</ul>
+
+In addition, we deliver SlipStream in a hardware turn key solution, called <a href="/products/nuvlabox.html">NuvlaBox</a>. 
+
 <h1>SaaS Plan</h1>
 
 If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on our <a href="https://slipstream.sixsq.com">SlipStream hosted service</a>.  
 
-<div id="pricing-table" class="clear">
+<div id="pricing-table" class="clear" style="margin-left: 240px; margin-right: 240px;">
     <div class="plan">
         <h3>Hosted Service (SaaS) Basic<span>Free</span></h3>
+        &nbsp;
         <ul>
             <li><b>1</b> User</li>
-            <li><b>2</b> Connector (EC2 and exoscale)</li>
+            <li><b>2</b> Connectors (EC2 and exoscale)</li>
             <li><b>Unlimited</b> deployments</li>
             <li><b>Unlimited</b> image creations</li>			
-            <li><b>Always up to date</b></li>			
+            <li><b>Always up to date</b></li>
             <li><b>Community support only</b></li>			
+            <li>Cloud charges at your cost</li>
         </ul> 
     </div>
     <div class="plan">
@@ -34,27 +48,23 @@ If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on o
 		/ month
         <ul>
             <li><b>1</b> User</li>
-            <li><b>2</b> Connector (EC2 and exoscale)</li>
+            <li><b>2</b> Connectors (EC2 and exoscale)</li>
             <li><b>Unlimited</b> deployments</li>
             <li><b>Unlimited</b> image creations</li>			
             <li><b>Always up to date</b></li>			
             <li><b>Access to our user support</b></li>
             <li><b>Publish modules</b></li>
+            <li>Cloud charges at your cost</li>
+            <li><img src="/img/design/buy_button_disabled.png" alt="buy" /></li>
         </ul>
     </div>
 </div>
 
-The only other cost is to the cloud provider for the use of their resources, 
-
-In addition, we deliver SlipStream in a hardware turn key solution, called <a href="/products/nuvlabox.html">NuvlaBox</a>. 
+<h1>On-Premise Subscription Plan</h1>
 
 If you prefer to have SlipStream installed **in-house**, SixSq delivers certified SlipStream bundles, containing software binary packages, documentation, starter kit and examples. The bundles can be created 'à la carte', including open sourced and proprietary connectors, as well as custom image and deployment recipes and scripts. The bundles also include maintenance and support so that you stay up to date with our fast release cycles.
 
-SlipStream's pricing policy is simple and transparent. You will find below various clear and flexible plans for the use of our pro SlipStream bundles.
-
-<h1>Subscription Plan</h1>
-
-With the subscription plan, you pay as you go and ensure you have access to the latest version of SlipStream
+With the subscription plan, you pay as you go and ensure you have access to the latest version of SlipStream (both minor and major releases)
 and access to our maintenance and support service. No more costs, no surprises.
 
 <h2>SlipStream Bundles</h2>
@@ -125,9 +135,9 @@ and access to our maintenance and support service. No more costs, no surprises.
 </div>
 
 
-<h1>License Plan</h1>
+<h1>On-Premise License Plan</h1>
 
-With the license plan, you pay once and own the SlipStream license. To have access to our upgrades and maintenance and support service, you simply need to subscribe to our support plan.
+With the license plan, you pay once and **own the SlipStream license**. To have access to our upgrades (minor releases only), maintenance and support service, you simply need to subscribe to our support plan.
 
 <h2>SlipStream Bundles</h2>
 
@@ -190,7 +200,7 @@ With the license plan, you pay once and own the SlipStream license. To have acce
     </div>
 </div>
 
-<h1>Definitions</h1>
+<h1>Cloud Connectors</h1>
 
 SlipStream supports a number of cloud providers and technologies. Connectors provide this interface.  The following lists the connectors which are currently available, released under open source and proprietary licenses.
 
@@ -216,37 +226,37 @@ Available proprietary connectors:
 
 <h1>Definitions</h1>
 
-The following are terms used in the context of SlipStream™, referred to when defining license capabilities and constraints. 
+The following are terms used in the context of SlipStream, referred to when defining license capabilities and constraints. 
 
 <ul>
-    <li>Connector: A connector is an instance of a specific software component that allows a SlipStream™ server to interface with a specific IaaS cloud service, normally for a specific region and/or zone. For example, connectors are normally designed to point specifically to a single region for a given cloud.  It is therefore standard practice to have several separate instances of the same connector (class) to interface SlipStream™ with several regions of the same cloud. License restrictions therefore normally refer to connector instance.</li>
-    <li>Open source connector: this refers to a connector released under an open source license (normally the same license as the SlipStream™ Server). SixSq® normally releases connectors which interface with open source IaaS implementations under an open source license.</li>
+    <li>Connector: A connector is an instance of a specific software component that allows a SlipStream server to interface with a specific IaaS cloud service, normally for a specific region and/or zone. For example, connectors are normally designed to point specifically to a single region for a given cloud.  It is therefore standard practice to have several separate instances of the same connector (class) to interface SlipStream with several regions of the same cloud. License restrictions therefore normally refer to connector instance.</li>
+    <li>Open source connector: this refers to a connector released under an open source license (normally the same license as the SlipStream Server). SixSq® normally releases connectors which interface with open source IaaS implementations under an open source license.</li>
     <li>Proprietary (closed source) connectors: this refers to connectors released under a proprietary license. SixSq® normally releases connectors which interface with a proprietary IaaS implementation or service under a proprietary license.</li>
-    <li>Active User: a user refers to an active user, as in the sense of SlipStream™. Only active users can perform any type of action in the system.</li>
+    <li>Active User: a user refers to an active user, as in the sense of SlipStream. Only active users can perform any type of action in the system.</li>
     <li>Release: a release is identified using three numbers, dot separated.  For example, 2.0.6.</li>
     <li>Major release: a major release refers to the first number of the release string. For example the major release number for 2.0.6 is 2.</li>
     <li>Minor release: a minor release refers to the second number of the release string. For example the minor release number for 2.0.6 is 0.</li>
     <li>Release number: a release number refers to the third number of the release string. For example, the release number for 2.0.6 is 6.</li>
-    <li>Deployment: a deployment in the context of SlipStream™ is the creation of one virtual machine or several virtual machines deployed together.</li>
-    <li>Image creation: an image creation in the context of SlipStream™ is the creation of a new machine image, from an existing native image.</li>
-    <li>SixSq® SlipStream™ SaaS: this app store is a SlipStream™ service managed by SixSq® and offered as a SaaS. This service is available as is, without any guarantees of availability.  It holds a number of images and deployments, which can be used and exported to a private SlipStream™ instance.</li>
+    <li>Deployment: a deployment in the context of SlipStream is the creation of one virtual machine or several virtual machines deployed together.</li>
+    <li>Image creation: an image creation in the context of SlipStream is the creation of a new machine image, from an existing native image.</li>
+    <li>SixSq® SlipStream SaaS: this app store is a SlipStream service managed by SixSq® and offered as a SaaS. This service is available as is, without any guarantees of availability.  It holds a number of images and deployments, which can be used and exported to a private SlipStream instance.</li>
 </ul>
 
 <h1>Licensing Rules</h1>
 
-The following licensing or subscription rules are applicable to SlipStream™:
+The following licensing or subscription rules are applicable to SlipStream:
 
 <h2>Connector</h2>
 
-Each connector must be attached to a SlipStream Server bundle. For example, in the case where a customer already has reached the limit of the number of allowed connectors for his/her SlipStream™ Server license or subscription, if he/she wants to support an extra proprietary cloud, he/she will need to purchase a supplementary Extra Connector license or subscription, as well as a Proprietary Connector license or subscription. On the other hand, if the customer wants to support a new open source cloud, only the Extra Connector license or subscription is required.</li>
+Each connector must be attached to a SlipStream Server bundle. For example, in the case where a customer already has reached the limit of the number of allowed connectors for his/her SlipStream Server license or subscription, if he/she wants to support an extra proprietary cloud, he/she will need to purchase a supplementary Extra Connector license or subscription, as well as a Proprietary Connector license or subscription. On the other hand, if the customer wants to support a new open source cloud, only the Extra Connector license or subscription is required.</li>
 
-Each proprietary connector must be associated to a SlipStream™ Server license or subscription. In other words, a proprietary connector cannot be purchased alone.
+Each proprietary connector must be associated to a SlipStream Server license or subscription. In other words, a proprietary connector cannot be purchased alone.
 
 The license or subscription bearer is required to upgrade regularly, within the next full quarter, such that he/she always runs the latest version minus one minor version.  If this constraint is not possible, a special maintenance and support contract is required.
 
 <h2>Server Instances</h2>
 
-A SlipStream™ license or subscription bearer gives right to a single instance of the service.  Via its connector, however, it can federate IaaS clouds installed in a number of different sites. 
+A SlipStream license or subscription bearer gives right to a single instance of the service.  Via its connector, however, it can federate IaaS clouds installed in a number of different sites. 
 
 <h2>Notes</h2>
 
