--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -44,7 +44,7 @@ If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on o
         </ul> 
     </div>
     <div class="plan">
-        <h3>Hosted Service (SaaS) Premium<span>€50</span></h3>
+        <h3 class="soon">Hosted Service (SaaS) Premium<span>€50</span></h3>
 		/ month
         <ul>
             <li><b>1</b> User</li>
