Add soon and create account button

--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -41,6 +41,9 @@ If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on o
             <li><b>Always up to date</b></li>
             <li><b>Community support only</b></li>			
             <li>Cloud charges at your cost</li>
+            <li>
+                <button type="button" class="create-account" onclick="location='https://slipstream.sixsq.com';" />
+            </li>
         </ul> 
     </div>
     <div class="plan">
@@ -55,7 +58,6 @@ If you prefer the peace of mind of a **SaaS** delivery model, you can  rely on o
             <li><b>Access to our user support</b></li>
             <li><b>Publish modules</b></li>
             <li>Cloud charges at your cost</li>
-            <li><img src="/img/design/button_buy_now_disabled.png" alt="buy" /></li>
         </ul>
     </div>
 </div>
