--- a/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
+++ b/_posts/slipstream/4000-01-01-product-slipstream-pricing.html
@@ -273,4 +273,6 @@ Please note the following:
 
 <h1>Want to Know More?</h1>
 
-Interested and want to know more? We'd be pleased to give you a demo or provide you with further information. Request a member of the SixSq team to <a href="mailto:support@sixsq.com">contact you</a>.
+Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
+
+<span class='contact-us-placeholder'></span>
