--- a/customers/index.html
+++ b/customers/index.html
@@ -1,5 +1,6 @@
 ---
-layout: category_index
-title: Customers
+layout: customer_list
+title: Our Customers
 category: customers
+class: customers
 ---
