--- a/videos/index.html
+++ b/videos/index.html
@@ -16,7 +16,7 @@ category: videos
   <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">View more Videos &raquo;</a></p>
 </div>
 
-<div class="nuvlabox">
+<div class="nuvlabox odd">
   <div id="talks" class="container spacy">
     <h1>Talks</h1>
     <div class="row"></div>
