--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,32 @@ class: contact
     </div>
     <div class="col-md-6">
       <h3>Social Networks</h3>
+      <div class="row">
+        <div class="col-md-2 col-xs-4">
+          <p>
+            <a href="http://www.linkedin.com/company/sixsq">
+              <img src="/img/design/social_logos/linkedin_hover.png" />
+            </a>
+          </p>
+        </div>
+        <div class="col-md-2 col-xs-4">
+          <p>
+            <a href="https://plus.google.com/115601684384239978812/posts" rel="publisher">
+              <img src="/img/design/social_logos/googleplus_hover.png" />
+            </a>
+          </p>
+        </div>
+        <div class="col-md-2 col-xs-4">
+          <p>
+            <a href="http://twitter.com/sixsq">
+              <img src="/img/design/social_logos/twitter_hover.png" />
+            </a>
+          </p>
+        </div>
+      </div>
       <p>
-        <a href="http://twitter.com/sixsq">
-          <img src="/img/design/social_logos/twitter_hover.png" />
-        </a>
         Please use <a href="https://twitter.com/#!/search/%23slips3m">#slips3m</a> for
         <a href="/products/slipstream.html">SlipStream</a> related tweets</p>
-      </p>
-      <p>
-        <a href="http://www.linkedin.com/company/sixsq">
-          <img src="/img/design/social_logos/linkedin_hover.png" />
-        </a>
-      </p>
-      <p>
-        <a href="https://plus.google.com/115601684384239978812/posts" rel="publisher">
-          <img src="/img/design/social_logos/googleplus_hover.png" />
-        </a>
       </p>
     </div>
   </div>
