--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@ class: contact
     </div>
     <div class="col-md-6">
       <h3>Social Networks</h3>
-      <div class="row">
+      <div class="row social-network">
         <div class="col-md-2 col-xs-4">
-          <p>
+          <div>
             <a href="http://www.linkedin.com/company/sixsq">
               <img src="/img/design/social_logos/linkedin_hover.png" />
             </a>
-          </p>
+          </div>
         </div>
         <div class="col-md-2 col-xs-4">
           <p>
