Add sentence to contact page for partners

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ class: contact
 <div class="jumbotron" id="nuvlabox-main-story">
   <div class="container">
     <h1>Contact</h1>
-    <p>Need information? Give feedback? Get in touch!</p>
+    <p>Need information? Give feedback? Want to talk about becoming a partner? Get in touch!</p>
   </div>
 </div>
 
