--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: plain
 title: Contact
 category: contact
-class: contact
+class: about
 ---
 
 <div class="jumbotron" id="nuvlabox-main-story">
@@ -95,4 +95,17 @@ class: contact
       </small>
     </div>
   </div>
-</div> <!-- container -->
+</div>
+
+<div style="color: white; background-color: #9B9B9B;">
+  <div class="container spacy">
+  <h1 id="contact-us-form">Get in touch</h1>
+  <script charset="utf-8" src="//js.hsforms.net/forms/current.js"></script>
+  <script>
+    hbspt.forms.create({ 
+      portalId: '475360',
+      formId: 'a5849a59-bd28-4685-a1e1-3d4917af34fb'
+    });
+  </script>
+</div>
+</div>
