--- a/eguides/index.html
+++ b/eguides/index.html
@@ -1,16 +1,18 @@
 ---
 layout: media
-title: White Papers
-category: whitepaper
+title: eGuide series
+category: eguide
+class: media
 ---
 
 <div class="jumbotron">
   <div class="container">
-    <h1>White Papers</h1>
+    <h1>eGuide series</h1>
+    <h2>Read about the value SixSq products and services can deliver to you and your organisation.</h2>
   </div>
 </div>
 
-<div class="container spacy">
+<div id="msp-eguide" class="container spacy">
   <h1>The rise of emerging economies calls for scalable education solutions</h1>
   <center>
     <img src="/img/content/whitepapers_cover/WhitePaper_Rural_schools_commercial.png" />
