Integrate Hubspot and menu update

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -13,11 +13,42 @@ class: media
 </div>
 
 <div id="msp-eguide" class="container spacy">
-  <h1>The rise of emerging economies calls for scalable education solutions</h1>
-  <center>
-    <img src="/img/content/whitepapers_cover/WhitePaper_Rural_schools_commercial.png" />
-  </center>
   <div class="container">
-    <p><a href="/whitepapers/WhitePaper_Rural_schools_commercial.pdf" class="btn btn-primary btn-lg" role="button">Read &raquo;</a></p>
+    <h1>eGuide for Managed Service Providers</h1>
+    <p>Why Managed Service Providers Should Focus on Automation</p>
+    <p><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
   </div>
 </div>
+
+<div id="var-eguide" class="container spacy">
+  <div class="container">
+    <h1>eGuide for Value-Added Resellers</h1>
+    <p>How Value-Added Resellers Benefit from Application Deployment Automation</p>
+    <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  </div>
+</div>
+
+<div id="iaas-eguide" class="container spacy">
+  <div class="container">
+    <h1>eGuide for IaaS Service Providers</h1>
+    <p>How IaaS Service Providers Benefit from Application Deployment Automation</p>
+    <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  </div>
+</div>
+
+<div id="hnx" class="container spacy">
+  <div class="container">
+    <h1>eGuide on Helix Nebula Marketplace</h1>
+    <p>How Helix Nebula Marketplace Delivers Cloud to Big Science</p>
+    <p><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  </div>
+</div>
+
+<div id="elearning" class="container spacy">
+  <div class="container">
+    <h1>eGuide for IT providers in emerging economies</h1>
+    <p>How to bridge the digital divide in emerging economies</p>
+    <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  </div>
+</div>
+
