Update phone number

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,7 @@ class: about
   <div class="row">
     <div class="col-md-4 address">
       <h3>Phone</h3>
-      <p>Info: +41 77 44 68 119</p>
-      <p>Support: +41 22 57 52 229</p>
+      <p>Info/support: +41 22 54 41 733</p>
 
       <h3>Or come and visit</h3>
       <p>SixSq.</p>
@@ -78,8 +77,7 @@ class: about
   <div class="row">
     <div class="col-md-4 address">
       <h3>Phone</h3>
-      <p>Info: +1 514 878 4388</p>
-      <p>Support: +1 514 878 4388</p>
+      <p>Info/support: +1 514 878 4388</p>
 
       <h3>Or come and visit</h3>
       <p>SixSq.</p>
