--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -5,3 +5,8 @@ category: r-and-d
 class: r-and-d
 ---
 
+SixSq is at the frontier between innovative development and commercial exploitation. Two of the three co-founders of the company met at [CERN](http://cern.ch), the European Laboratory for Particle Physics, where the web was born. Strong of this background, SixSq continues to participate to innovative research and development projects, national and international.
+
+This page summarises the project we are involved in, focusing on accelerating our development roadmap for [SlipStream](/products/slipstream) and [NuvlaBox](/products/nuvlabox). 
+
+For our [customers](/customers), this means they benefit from cutting edge innovation.
