--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -2,7 +2,7 @@
 layout: category_index
 title: Research and Development
 category: r-and-d
-class: r-and-d
+class: overview
 ---
 
 SixSq is at the frontier between innovative development and commercial exploitation. Two of the three co-founders of the company met at [CERN](http://cern.ch), the European Laboratory for Particle Physics, where the web was born. Strong of this background, SixSq continues to participate to innovative research and development projects, national and international.
