update R&D header text

--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -5,8 +5,17 @@ category: r-and-d
 class: overview
 ---
 
-SixSq is at the frontier between innovative development and commercial exploitation. Two of the three co-founders of the company met at [CERN](http://cern.ch), the European Laboratory for Particle Physics, where the web was born. Strong of this background, SixSq continues to participate to innovative research and development projects, national and international.
+SixSq is at the frontier between innovative development and commercial
+exploitation.  SixSq was born from ideas developed from European
+projects and SixSq continues to participate in research and
+development projects, both at the national and international levels.
 
-This page summarises the project we are involved in, focusing on accelerating our development roadmap for [SlipStream](/products/slipstream) and [NuvlaBox](/products/nuvlabox). 
+We bring our expertise and experience to projects in which we
+participate while also taking advantage of the projects' international
+collaborations to refine and to expand our
+solutions--[SlipStream](/products/slipstream) and
+[NuvlaBox](/products/nuvlabox).
 
-For our [customers](/customers), this means they benefit from cutting edge innovation.
+The wider research community benefits from our committment to
+open-source development and our [customers](/customers) benefit both
+from the cutting-edge innovation coming from these projects.
