--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -13,7 +13,7 @@ development projects, both at the national and international levels.
 We bring our expertise and experience to projects in which we
 participate while also taking advantage of the projects' international
 collaborations to refine and to expand our
-solutions--[SlipStream](/products/slipstream) and
+solutions: [SlipStream](/products/slipstream) and
 [NuvlaBox](/products/nuvlabox).
 
 The wider research community benefits from our committment to
