--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -6,9 +6,10 @@ class: overview
 ---
 
 SixSq is at the frontier between innovative development and commercial
-exploitation.  SixSq was born from ideas developed from European
-projects and SixSq continues to participate in research and
-development projects, both at the national and international levels.
+exploitation.  SixSq was born from ideas created at [CERN](http://cern.ch),
+the European Laboratory for Particle Physics. SixSq continues to
+participate in research and development projects, both at the national
+and international levels.
 
 We bring our expertise and experience to projects in which we
 participate while also taking advantage of the projects' international
@@ -16,6 +17,6 @@ collaborations to refine and to expand our
 solutions: [SlipStream](/products/slipstream) and
 [NuvlaBox](/products/nuvlabox).
 
-The wider research community benefits from our committment to
-open-source development and our [customers](/customers) benefit both
+The wider research community benefits from our commitment to
+open-source development and our [customers](/customers) benefit
 from the cutting-edge innovation coming from these projects.
