--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: plain
 title: Contact
 category: contact
 class: about
+permalink: /contact/
 ---
 
 <div class="jumbotron" id="nuvlabox-main-story">
