Extend new layout to NB

--- a/contact.html
+++ b/contact.html
@@ -97,14 +97,15 @@ permalink: /contact/
 </div>
 
 <div style="color: white; background-color: #9B9B9B;">
+  <div id="contact-us-form" class="anchor"></div>
   <div class="container spacy">
-  <h1 id="contact-us-form">Get in touch</h1>
-  <script charset="utf-8" src="//js.hsforms.net/forms/current.js"></script>
-  <script>
-    hbspt.forms.create({ 
-      portalId: '475360',
-      formId: 'a5849a59-bd28-4685-a1e1-3d4917af34fb'
-    });
-  </script>
-</div>
+    <h1>Get in touch</h1>
+    <script charset="utf-8" src="//js.hsforms.net/forms/current.js"></script>
+    <script>
+      hbspt.forms.create({ 
+        portalId: '475360',
+        formId: 'a5849a59-bd28-4685-a1e1-3d4917af34fb'
+      });
+    </script>
+  </div>
 </div>
