--- a/eguides/index.html
+++ b/eguides/index.html
@@ -12,16 +12,26 @@ class: media
   </div>
 </div>
 
-<div id="msp-eguide" class="container spacy">
-  <div class="container">
-    <h1>eGuide for Managed Service Providers</h1>
-    <p>Why Managed Service Providers Should Focus on Automation</p>
-    <p><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
-  </div>
-</div>
+<div class="container spacy">
 
-<div id="var-eguide" class="container spacy">
-  <div class="container">
+  <div id="msp-eguide" class="row row-highlights">
+    <div class="col-md-6 col-2-text">
+        <h1>Managed Service Providers</h1>
+        <p>Why Managed Service Providers Should Focus on Automation.</p>
+        <center>
+          <a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a>
+        </center>
+    </div>
+    <div class="col-md-6 col-2-image">
+      <h1>
+          <center>
+              <span class="glyphicon glyphicon-flash"></span>
+          </center>
+      </h1>
+    </div>
+  </div>
+
+  <div id="var-eguide" class="container">
     <h1>eGuide for Value-Added Resellers</h1>
     <p>How Value-Added Resellers Benefit from Application Deployment Automation</p>
     <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
