--- a/eguides/index.html
+++ b/eguides/index.html
@@ -25,40 +25,77 @@ class: media
     <div class="col-md-6 col-2-image">
       <h1>
           <center>
-              <span class="glyphicon glyphicon-flash"></span>
+              <img style="max-height: 280px;" src="/img/content/eguides/MSP_eGuide_screen_shot.png" alt="MSP_eGuide_screen_shot"/>
           </center>
       </h1>
     </div>
   </div>
 
-  <div id="var-eguide" class="container">
-    <h1>eGuide for Value-Added Resellers</h1>
-    <p>How Value-Added Resellers Benefit from Application Deployment Automation</p>
-    <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  <div id="var-eguide" class="row row-highlights">
+      <div class="col-md-6 col-2-image">
+        <h1>
+            <center>
+                <img style="max-height: 280px;" src="/img/content/eguides/VAR_eGuide_screen_shot.png" alt="VAR_eGuide_screen_shot"/>
+            </center>
+        </h1>
+      </div>
+      <div class="col-md-6 col-2-text">
+          <h1>Value-Added Resellers</h1>
+          <p>How Value-Added Resellers Benefit from Application Deployment Automation</p>
+          <center>
+            <p><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+          </center>
+      </div>
   </div>
-</div>
 
-<div id="iaas-eguide" class="container spacy">
-  <div class="container">
-    <h1>eGuide for IaaS Service Providers</h1>
-    <p>How IaaS Service Providers Benefit from Application Deployment Automation</p>
-    <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  <div id="iaas-eguide" class="row row-highlights">
+    <div class="col-md-6 col-2-text">
+      <h1>IaaS Service Providers</h1>
+      <p>How IaaS Service Providers Benefit from Application Deployment Automation</p>
+      <center>
+        <p><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+      </center>
+    </div>
+    <div class="col-md-6 col-2-image">
+      <h1>
+          <center>
+              <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eGuide_screen_shot.png" alt="IaaS_eGuide_screen_shot"/>
+          </center>
+      </h1>
+    </div>
   </div>
-</div>
 
-<div id="hnx" class="container spacy">
-  <div class="container">
-    <h1>eGuide on Helix Nebula Marketplace</h1>
-    <p>How Helix Nebula Marketplace Delivers Cloud to Big Science</p>
-    <p><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+  <div id="hnx" class="row row-highlights">
+      <div class="col-md-6 col-2-image">
+        <h1>
+            <center>
+                <img style="max-height: 280px;" src="/img/content/eguides/HNX_basics_eGuide_screen_shot.png" alt="HNX_basics_eGuide_screen_shot"/>
+            </center>
+        </h1>
+      </div>
+      <div class="col-md-6 col-2-text">
+        <h1>Helix Nebula Marketplace</h1>
+        <p>How Helix Nebula Marketplace Delivers Cloud to Big Science</p>
+        <center>
+          <p><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+        </center>
+      </div>
   </div>
-</div>
 
-<div id="elearning" class="container spacy">
-  <div class="container">
+<div id="elearning" class="row row-highlights">
+  <div class="col-md-6 col-2-text">
     <h1>eGuide for IT providers in emerging economies</h1>
     <p>How to bridge the digital divide in emerging economies</p>
-    <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+    <center>
+      <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
+    </center>
+  </div>
+  <div class="col-md-6 col-2-image">
+    <h1>
+        <center>
+            <img style="max-height: 280px;" src="/img/content/eguides/eLearning_in_emerging_economies_eGuide_screen_shot.png" alt="eLearning_in_emerging_economies_eGuide_screen_shot"/>
+        </center>
+    </h1>
   </div>
 </div>
 
