--- a/customers/index.html
+++ b/customers/index.html
@@ -1,6 +1,8 @@
 ---
-layout: customer_list
+layout: category_index
 title: Our Customers
 category: customers
 class: about
 ---
+
+Here are a few of our customers. We are proud of the trust they put in our knowledge, products and services.
