--- a/eguides/index.html
+++ b/eguides/index.html
@@ -12,7 +12,7 @@ class: media
   </div>
 </div>
 
-<div class="container spacy">
+<div class="container big">
 
   <div id="msp-eguide" class="row row-highlights">
     <div class="col-md-6 col-2-text">
@@ -84,7 +84,7 @@ class: media
 
 <div id="elearning" class="row row-highlights">
   <div class="col-md-6 col-2-text">
-    <h1>eGuide for IT providers in emerging economies</h1>
+    <h1>IT providers in emerging economies</h1>
     <p>How to bridge the digital divide in emerging economies</p>
     <center>
       <p><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide" class="btn btn-primary btn-lg" role="button">Get It &raquo;</a></p>
