--- a/r-and-d/index.html
+++ b/r-and-d/index.html
@@ -1,8 +1,9 @@
 ---
 layout: category_index
 title: Research and Development
+class: r-and-d
+sub: overview
 category: r-and-d
-class: overview
 ---
 
 SixSq is at the frontier between innovative development and commercial
