Small changes to text

--- a/videos/index.html
+++ b/videos/index.html
@@ -14,14 +14,14 @@ class: media
 <div id="tutorials" class="container spacy">
   <h1>Tutorials</h1>
   <div class="row"></div>
-  <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">View more Videos &raquo;</a></p>
+  <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">Watch now &raquo;</a></p>
 </div>
 
 <div class="nuvlabox odd">
   <div id="talks" class="container spacy">
     <h1>Talks</h1>
     <div class="row"></div>
-    <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">View more Videos &raquo;</a></p>
+    <p><a href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g" class="btn btn-primary btn-lg" role="button">View videos &raquo;</a></p>
   </div>
 </div>
 
