Add redirects from previous page structure

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@ title: Contact
 category: contact
 class: about
 permalink: /contact/
+redirect_from:
+  - /contact.html
 ---
 
 <div class="jumbotron" id="nuvlabox-main-story">
