--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: plain
 title: Contact
+head-title: Contact Us
 category: contact
 class: about
 permalink: /contact/
@@ -61,9 +62,9 @@ redirect_from:
       <p>Info/support: +41 22 54 41 733</p>
 
       <h3>Or come and visit</h3>
-      <p>SixSq.</p>
+      <p>SixSq</p>
       <p>Rue du Bois-du-Lan, 8</p>
-      <p>1217, Geneva</p>
+      <p>1217, Geneva (Meyrin)</p>
       <p>Switzerland</p>
     </div>
 
@@ -83,10 +84,10 @@ redirect_from:
       <p>Info/support: +1 514 878 4388</p>
 
       <h3>Or come and visit</h3>
-      <p>SixSq.</p>
+      <p>SixSq</p>
       <p>6700 Côte de Liesse, Suite 105</p>
       <p>Montréal (St-Laurent), Québec</p>
-      <p>H4T-2B5</p>
+      <p>H4T 2B5</p>
       <p>Canada</p>
     </div>
     <div class="col-md-8">
