Update html title

--- a/eguides/index.html
+++ b/eguides/index.html
@@ -1,6 +1,7 @@
 ---
 layout: media
 title: eGuide series
+head-title: eGuide series&#58; Benefits from cloud, PaaS, DevOps and hybrid cloud
 category: eguide
 class: media
 ---
