--- a/personae/index.html
+++ b/personae/index.html
@@ -1,6 +1,7 @@
 ---
 layout: personae_index
 title: Who we designed SlipStream for?
+head-title: Our personae&#58; find out how SixSq helps you in your role
 category: personae
 class: personae
 ---
