Add devops, update to pass and welcome page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
-title: Agile Cloud Automation Solutions
-summary: SixSq provides cloud computing solutions to companies of all sizes. We specialise in process automation, bringing financial benefits to our customers via our unique products.
+title: Smart Cloud Automation Solutions
+summary: SixSq provides cutting-edge cloud technologies that are key to the latest movement in cloud computing, Service-as-a-Service, shielding organizations from the pain of dealing with the nuts and bolts of delivering enterprise software. 
 twitter-image: /img/content/logo_sixsq.png
 ---
