--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
 title: Smart Cloud Automation Solutions
-summary: SixSq provides cutting-edge cloud technologies that are key to the latest movement in cloud computing, Service-as-a-Service, shielding organizations from the pain of dealing with the nuts and bolts of delivering enterprise software. 
+summary: Cutting-edge cloud technologies to give you friction-less application deployment automation, while giving you all the tools to understand cloud usage, control costs and get more out of any and all clouds. We deliver simplicity in this complex IT world. 
 twitter-image: /img/content/logo_sixsq.png
 ---
