Implement 26 recommendation for the welcome page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
 title: Smart Cloud Automation Solutions
-summary: Cutting-edge cloud technologies to give you friction-less application deployment automation, while giving you all the tools to understand cloud usage, control costs and get more out of any and all clouds. We deliver simplicity in this complex IT world. 
+summary: Cutting-edge cloud technologies which give you friction-less application deployment automation as well as all the tools you need to understand your cloud usage, control your costs and get more out of the cloud. We deliver simplicity in this complex IT world. 
 twitter-image: /img/content/logo_sixsq.png
 ---
