--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,14 @@ redirect_from:
             </a>
           </p>
         </div>
+        <div class="col-md-2 col-xs-4">
+          <p>
+            <a href="https://www.facebook.com/SixSq-143266939349560">
+              <img src="/img/design/social_logos/facebook_hover.png" />
+            </a>
+          </p>
+        </div>
       </div>
-      <p>
-        Please use <a href="https://twitter.com/#!/search/%23slips3m">#slips3m</a> for
-        <a href="/products/slipstream.html">SlipStream</a> related tweets</p>
-      </p>
     </div>
   </div>
 
