Implemented Alex's feedbck

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: welcome
 title: Smart Cloud Automation Solutions
-summary: Cutting-edge cloud technologies which give you friction-less application deployment automation as well as all the tools you need to understand your cloud usage, control your costs and get more out of the cloud. We deliver simplicity in this complex IT world. 
+summary: We deliver simplicity in this complex IT world. Our cutting-edge cloud technologies give you friction-less application deployment automation and all the tools you need to understand your cloud usage, control your costs and get more out of the cloud. 
 twitter-image: /img/content/logo_sixsq.png
 ---
